2010-04-12  Brad Hards  <bradh@frogmouth.net>  (wk)

	Spelling fixes.

2010-03-15  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in: Add autoconf template to set generated file to
	read-only in an Emacs buffer.

2010-01-21  Werner Koch  <wk@g10code.com>

	* Makefile.am (arch_gpg_error_cflags, arch_gpg_error_libs): New.
	(dumpsexp_CFLAGS): New.
	(dumpsexp_LDADD): Add arch_gpg_error_libs.
	(hmac256_CFLAGS, hmac256_LDADD): Add the arch variables.
	(libgcrypt_la_DEPENDENCIES): Add libcompat.
	* secmem.c (lock_pool): Mark unused args.
	* global.c (do_malloc, gcry_realloc, gcry_free, gcry_calloc)
	(gcry_calloc_secure, gcry_xcalloc, gcry_xcalloc_secure): Use
	gpg_err_set_errno.
	(_gcry_vcontrol): Call _gcry_compat_identification.
	* hmac256.c [__MINGW32CE__]: Include gpg-error.h.
	(_gcry_hmac256_file): Use gpg_err_set_errno.
	(gpg_err_set_errno) [!GPG_ERR_INLINE]: Add macro.
	* g10lib.h: Include libcompat.h.

2010-01-05  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_PK_ECDH): New.

2009-12-08  Werner Koch  <wk@g10code.com>

	* gcrypt.h.in (GCRY_CIPHER_MODE_AESWRAP): New.

2009-12-08  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (LTRCCOMPILE): Refactor with ...
	(RCCOMPILE): ... this new macro.  Add $(libgcrypt_la_CPPFLAGS).
	(SUFFIXES): Add .lo.
	(.rc.o): Change to ...
	(.rc.lo): ... this implicit rule.
	(gcrypt_res_ldflag): Removed.
	(gcrypt_res): Use libtool object file name here.
	(libgcrypt_la_LDFLAGS): Remove gcrypt_res_ldflag usage.
	(libgcrypt_la_LIBADD): Add gcrypt_res.

2009-11-29  Werner Koch  <wk@g10code.com>

	* hwfeatures.c (detect_ia32_gnuc): Repalce "=r" by "+r" so that
	HAS-CPUDID is always initialized.  Thanks to Ben Hutchings for
	pointing out this problem.

2009-08-05  Werner Koch  <wk@g10code.com>

	* ath.h: Include sys/msg.h.

2009-07-02  Werner Koch  <wk@g10code.com>

	* fips.c (_gcry_initialize_fips_mode): Do not use FIPS mode if
	/proc/.../fips_enabled has insufficient permissions.

	* dumpsexp.c (main): Fix handling multiple files.